--- a/main.html
+++ b/main.html
@@ -37,23 +37,23 @@
                     <div class="content">
                         <div class="title">
                             <span>S</span>
-                            RANK
+                            - RANK
                         </div>
                         <span>Shadow Monarch A.K.A</span>
-                        <h2><span>SUNG &nbsp;JIN &nbsp; WOO</span><small>(성진우)</small></h2>
+                        <h2><span>SUNG &nbsp;JIN &nbsp; WOO</span><span>HUNTER</span><small>( <span style="color: brown;">성진우</span>)</small></h2>
                         <p>Sung Jinwoo (성진우) is the main protagonist of Solo Leveling. Originally an infamously weak
                             E-Rank Hunter, he got the chance of a lifetime when he was selected as the Player of the
                             System, giving him the unique ability to grow in strength without restraint.
 
                             <br>
-                            <br>
+                            
 
                             As a result, by taking advantage of the opportunities offered to him by the System, Jinwoo
                             eventually rose to power as humanity's greatest hunter and the second Shadow Monarch.
                         </p>
                     </div>
                     <div class="side-nav">
-                        <a href="https://www.bing.com/search?q=solo+leveling+sung+jin+woo+Affiliation&FORM=HDRSC1" class="side-nav-link active"><SPan style="color: rgb(131, 38, 38);">A</SPan> bout</a>
+                        <a href="https://www.bing.com/search?q=solo+leveling+sung+jin+woo+Affiliation&FORM=HDRSC1" class="side-nav-link active"><SPan style="color: rgb(131, 38, 38); text-decoration: none;">A</SPan>bout</a>
                         <a href="https://solo-leveling.fandom.com/wiki/Sung_Jinwoo" class="side-nav-link">Affiliation</a>
                         <a href="https://screenrant.com/solo-leveling-jinwoo-s-rank-episode-4-season-2/#:~:text=Scoring%20so%20highly%20during%20the%20reassessment%20that%20the,the%20highest%20level%20the%20anime%20has%20seen%20yet." class="side-nav-link">Status</a>
                         <a href="" class="side-nav-link">Relationships</a>
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="main-video">
-            <video autoplay="autoplay" loop>
+            <video autoplay="autoplay"  loop >
                 <source src="xxxx.mp4" type="video/mp4" />
             </video>
         </div>
